2013-06-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWAdaptors/common/GSWAppConnectSocket.c
	* GSWAdaptors/common/GSWUtil.c
	  make the old Apache Adaptor work on OpenBSD
	* GSWAdaptors/Apache/mod_gsweb.c
	* GSWAdaptors/Apache/GNUmakefile-Apache[1|2]x
	  remove all #ifdef Apache2, and remove old GNUmakefiles
	* GSWAdaptors/README.txt
	  note about Apache adaptor to work with OpenBSD Apache
	  delete GSWAdaptors/netscape
	

2013-06-02: David Wetzel <dave@turbocat.de>
	* GSWeb/GSWMessage.m
	  Remove warning
	* README
	  Change maintainer

2013-05-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GSWMessage.[h|]
	  get rid of bogus #ifndef NO_GNUSTEP
	* GSWeb/GSWHTTPIO.m
	  use the file handle in non-blocking mode in GNUstep
	  environment, uses a private GSFileHandle class
	* GSWeb/GSWApplication.[h|m]
	* GSWeb/GSWComponentRequestHandler.m
	  make _globalLock a NSRecursiveLock to fix problem
	  I introduced with SVN rev 36250, fixes bug 39092
	* GSWeb/GSWMultiKeyDictionary.m
	  Explicitly create a NSMutableDicitonary, see bug
	  39088
	* GSWeb/GSWProcFS.m
	  fix a format string
	* GSWDatabase/WODisplayGroup.m
	  uncomment the right method, and use an NSIndexSet
	  where needed instead of NSArray
	* GSWAdaptors/Apache/INSTALL
	  add a missing semicolon, and remove deprecated documentation
	* GSWAdaptors/Apache/mod_gsweb.c
	  make it compile with OpenBSD Apache 1.X
	* GSWAdaptors/common/GSWConfig.c
	  fix output

2013-05-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GSWElement.h
	  @class not needed after including full header of that class

2013-05-30: Graham Lee <iamleeg@gmail.com>
	* GSWeb/GSWContext.m
	  remove useless comparison
	* GSWeb/GSWDeclarationParser.m
	  fix some format strings and variables used in there
	* Add method to interface and remove a cast
	  from bug report 39088

2013-05-29: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GNUmakefile
	* GSWeb/GSWProcFS.m
	* GSWeb/GSWUtils.m